# nemo-tradeblocks

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  RISK_SIMULATOR_AUDIT.md  block-combine-split-issue.md  buildfiles.sh  calendar-display-issue.md  dev-requirements.txt  docker-compose.yml  jest.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  sample-trade-log.csv  temp_handler.txt  test-auto-tp-data.csv  test-csv-parsing.js  test-tp-candidates.js  test-tp-comprehensive.js  test-upload.mjs  vercel.json  walk-forward-optimization-issue.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  main.py  page.tsx
app/api/: portfolio.py
app/assets/: ninja-style.css  storage.js  tradeblocks-style.css
app/calculations/: __init__.py  correlation.py  geekistics.py  monte_carlo.py  optimization.py  performance.py  position_sizing.py  shared.py  trade_analysis.py
app/dash_app/: app.py
app/data/: daily_log_processor.py  models.py  processor.py
app/services/: portfolio_cache.py  portfolio_service.py
app/utils/: advanced_stats.py  calculations.py  placeholders.py  theme.py
components/: app-sidebar.tsx  auto-tp-optimizer-mae-mfe.tsx  auto-tp-optimizer-v2.tsx  auto-tp-optimizer-v3.tsx  block-dialog.tsx  block-switch-dialog.tsx  match-review-dialog.tsx  mode-toggle.tsx  multi-select.tsx  section-cards.tsx  sidebar-active-blocks.tsx  sidebar-footer-legal.tsx  site-header.tsx  strategy-breakdown-table.tsx
components/auto-tp-optimizer/: efficiency-matrix.tsx  exit-reason-breakdown.tsx  mfe-distribution.tsx  missed-profit-chart.tsx  strategy-comparison.tsx
components/charts/: AutoInsights3.tsx  AutoInsightsSummary.tsx  DynamicTPOptimizer.tsx  ExitReasonAttributionMatrix.tsx  ExitReasonContributionChart.tsx  ExitReasonTPHeatmap.tsx  StrategyExitHeatmap.tsx  StrategyExitReasonMatrix.tsx  StrategyExitTPMatrix.tsx  TPClusterMap.tsx  TPGainCurve.tsx  WeightedExitImpactTable.tsx
components/multi-tp-optimizer/: MultiTPOptimizerPanel.tsx
components/performance-charts/: chart-wrapper.tsx  day-of-week-chart.tsx  drawdown-chart.tsx  equity-curve-chart.tsx  excursion-distribution-chart.tsx  excursion-ratio-chart.tsx  exit-reason-chart.tsx  holding-duration-chart.tsx  mae-pnl-scatter-chart.tsx  margin-utilization-chart.tsx  mfe-mae-scatter-chart.tsx  monthly-returns-chart.tsx  paired-leg-outcomes-chart.tsx  performance-filters.tsx  performance-metrics.tsx  premium-efficiency-chart.tsx  profit-capture-chart.tsx  return-distribution-chart.tsx  risk-evolution-chart.tsx  rolling-metrics-chart.tsx  rom-timeline-chart.tsx  tp-sl-optimizer-panel.tsx  tpsl-optimizer-panel.tsx  trade-sequence-chart.tsx  vix-regime-chart.tsx  win-loss-streaks-chart.tsx
components/personal-dashboard/: PersonalPLCalendar.tsx  PersonalSummary.tsx  PersonalTradeTable.tsx  PersonalUploader.tsx
components/pl-calendar/: DailyDetailModal.tsx  MonthlyPLCalendar.tsx  MonthlyWeeklySummary.tsx  QuarterlyPLView.tsx  YearHeatmap.tsx  YearlyPLTable.tsx  calendar-grid.tsx  day-cell.tsx  day-detail-modal.tsx  risk-heatmap.tsx  risk-scatter.tsx  trade-calendar.tsx  utilization-panel.tsx  utilization-trend.tsx  weekly-summary-panel.tsx
components/position-sizing/: margin-chart.tsx  margin-statistics-table.tsx  strategy-kelly-table.tsx  strategy-results.tsx
components/reconciliation-charts/: DualEquityCurveChart.tsx  ReconciliationMetrics.tsx  SlippageDistributionChart.tsx
components/risk-simulator/: statistics-cards.tsx  trading-frequency-card.tsx
components/tp-optimizer/: TPFileUpload.tsx  TPOptimizePanel.tsx  TPOptimizer.tsx  TPOptimizerAnalyzer.tsx  TPSummary.tsx  tpOptimizerCore.ts
components/ui/: dialog.tsx
components/walk-forward/: analysis-chart.tsx  period-selector.tsx
data/: tp_optimizer_mae_mfe.json  tp_optimizer_results.json
docs/: CONTEXT.md  comparison-blocks.md  development.md  tpsl-optimizer.md
github-issues/: 02-walk-forward-ui.md  05-calendar-view.md
legacy/: README.md  pytest.ini
legacy/app/: main.py
legacy/plans/: monte-carlo-realistic-implementation.md  performance-architecture-improvements.md  performance-blocks-implementation.md  position-sizing-enhancements.md
legacy/scripts/: start-dev.sh
legacy/tests/: conftest.py
lib/: utils.ts
lib/analytics/: format.ts  maeMfe.ts  returns.ts
lib/calculations/: correlation.ts  exit-optimization.ts  index.ts  kelly.ts  mfe-mae.ts  monte-carlo.ts  multi-tp-optimizer.ts  portfolio-stats.ts  reconciliation-stats.ts  utilization-analyzer.ts  walk-forward-analyzer.ts
lib/db/: blocks-store.ts  index.ts  migration.ts  trades-store.ts
lib/formatters/: number-format.ts
lib/metrics/: trade-efficiency.ts
lib/models/: block.ts  (+6 more)
plans/: RISK_SIMULATOR_TASKS.md  future-advanced-features.md  immediate-next-steps.md  performance-architecture-improvements.md  upload-processing-implementation.md
scripts/: check-code.sh  fix-code.sh  setup.sh  start-dev.sh
tests/: conftest.py  setup.ts
types/: plotly.d.ts  react-calendar-heatmap.d.ts
(+135 files in other folders)
