[project]
name = "TradeBlocks"
version = "1.0.0"
description = "A comprehensive portfolio analysis application with modern UI"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "David Romeo", email = "davidmromeo@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "dash>=3.2.0,<4.0.0",
    "dash-mantine-components>=2.2.1,<3.0.0",
    "plotly>=5.24.1,<6.0.0",
    "pandas>=2.2.3,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "python-multipart>=0.0.12,<0.0.13",
    "pydantic>=2.9.2,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "dash-iconify>=0.1.2,<0.2.0",
    "flask-cors>=5.0.0,<6.0.0",
    "scipy>=1.14.1,<2.0.0",
]

[project.optional-dependencies]
analytics = [
    "scikit-learn>=1.5.2,<2.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "black>=24.8.0,<25.0.0",
    "ruff>=0.7.0,<0.8.0",
    "mypy>=1.11.0,<2.0.0",
    "pre-commit>=3.8.0,<4.0.0",
    "ipython>=8.27.0,<9.0.0",
    "ipdb>=0.13.13,<0.14.0",
    "rich>=13.7.1,<14.0.0",
    "watchdog>=5.0.3,<6.0.0",
    "httpx>=0.27.0,<0.28.0",
    "scipy>=1.14.1,<2.0.0",
    "scikit-learn>=1.5.2,<2.0.0"
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = '''
/(\n  # directories\n  \\.git\n  | \\.venv\n  | build\n  | dist\n)/\n'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP"
]
ignore = [
    "E501",
    "B008",
    "W191"
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
exclude = [
    ".venv",
    "build",
    "dist"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--ignore=docs",
    "--ignore=build",
    "--ignore=dist",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:"
]
